social.log
 * Running on http://0.0.0.0:6100/ (Press CTRL+C to quit)
 * Restarting with stat
 * Debugger is active!
 * Debugger pin code: 261-968-665
127.0.0.1 - - [02/Dec/2016 15:30:15] "GET /community_index HTTP/1.1" 200 -
127.0.0.1 - - [02/Dec/2016 15:30:15] "GET /lib/meta-plate.js HTTP/1.1" 200 -
127.0.0.1 - - [02/Dec/2016 15:30:15] "GET /lib/bootstrap35/js/bootstrap.js HTTP/1.1" 200 -
127.0.0.1 - - [02/Dec/2016 15:30:15] "GET /assets/ico/favicon.ico HTTP/1.1" 200 -
127.0.0.1 - - [02/Dec/2016 15:30:16] "GET /community_index HTTP/1.1" 200 -
127.0.0.1 - - [02/Dec/2016 15:30:16] "GET /lib/meta-plate.js HTTP/1.1" 200 -
127.0.0.1 - - [02/Dec/2016 15:30:16] "GET /lib/bootstrap35/js/bootstrap.js HTTP/1.1" 200 -
127.0.0.1 - - [02/Dec/2016 15:30:16] "GET /assets/ico/favicon.ico HTTP/1.1" 200 -
127.0.0.1 - - [02/Dec/2016 15:31:21] "GET / HTTP/1.1" 200 -
127.0.0.1 - - [02/Dec/2016 15:31:21] "GET /lib/bootstrap35/js/bootstrap.js HTTP/1.1" 200 -
127.0.0.1 - - [02/Dec/2016 15:31:21] "GET /lib/meta-plate.js HTTP/1.1" 200 -
127.0.0.1 - - [02/Dec/2016 15:31:21] "GET /assets/ico/favicon.ico HTTP/1.1" 200 -
127.0.0.1 - - [02/Dec/2016 15:31:25] "GET /assets/ico/favicon.ico HTTP/1.1" 200 -
127.0.0.1 - - [02/Dec/2016 15:33:38] "GET /community_index HTTP/1.1" 200 -
127.0.0.1 - - [02/Dec/2016 15:33:38] "GET /lib/meta-plate.js HTTP/1.1" 200 -
127.0.0.1 - - [02/Dec/2016 15:33:38] "GET /lib/bootstrap35/js/bootstrap.js HTTP/1.1" 200 -
127.0.0.1 - - [02/Dec/2016 15:33:38] "GET /assets/ico/favicon.ico HTTP/1.1" 200 -
127.0.0.1 - - [02/Dec/2016 15:33:41] "GET /assets/ico/favicon.ico HTTP/1.1" 200 -
127.0.0.1 - - [02/Dec/2016 15:35:40] "GET /community_index HTTP/1.1" 200 -
127.0.0.1 - - [02/Dec/2016 15:35:40] "GET /lib/meta-plate.js HTTP/1.1" 200 -
127.0.0.1 - - [02/Dec/2016 15:35:40] "GET /lib/bootstrap35/js/bootstrap.js HTTP/1.1" 200 -
127.0.0.1 - - [02/Dec/2016 15:35:40] "GET /assets/ico/favicon.ico HTTP/1.1" 200 -
127.0.0.1 - - [02/Dec/2016 15:36:44] "GET /assets/ico/favicon.ico HTTP/1.1" 200 -
127.0.0.1 - - [02/Dec/2016 15:37:29] "GET /community_index HTTP/1.1" 200 -
127.0.0.1 - - [02/Dec/2016 15:37:29] "GET /lib/meta-plate.js HTTP/1.1" 200 -
127.0.0.1 - - [02/Dec/2016 15:37:29] "GET /lib/bootstrap35/js/bootstrap.js HTTP/1.1" 200 -
127.0.0.1 - - [02/Dec/2016 15:37:29] "GET /assets/ico/favicon.ico HTTP/1.1" 200 -
 * Detected change in '/usr/local/klzhong/workspace/creditease/gitrepos/finance-news/social/modules/mod_community.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger pin code: 261-968-665
 * Detected change in '/usr/local/klzhong/workspace/creditease/gitrepos/finance-news/social/modules/mod_community.py', reloading
 * Restarting with stat
Traceback (most recent call last):
  File "main.py", line 8, in <module>
    from modules import mod_community
  File "/usr/local/klzhong/workspace/creditease/gitrepos/finance-news/social/modules/mod_community.py", line 69
    return db_model_community.select_all_paging(1, default_num_perpage):
                                                                       ^
SyntaxError: invalid syntax
